--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,49 @@
+# Dependencies
+node_modules/
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
+# Production builds
+dist/
+build/
+
+# Environment variables (NEVER commit these!)
 .env
+.env.local
+.env.*.local
+
+# IDE
+.vscode/
+.idea/
+*.swp
+*.swo
+*~
+.DS_Store
+
+# Testing & Coverage
+coverage/
+.nyc_output/
+
+# Logs
+logs/
+*.log
+
+# Cache
+.cache/
+.eslintcache
+
+# Temporary files
+tmp/
+temp/
+
+# Data & Generated
+data/
 crawled_content.txt
-data
-node_modules
+announcements.html
 swagger.json
 src/generated/
+
+# OS
+.DS_Store
+Thumbs.db
