--- a/package.json
+++ b/package.json
@@ -4,14 +4,17 @@
   "main": "index.js",
   "license": "MIT",
   "scripts": {
-    "start": "tsx src/index.ts",
-    "server": "tsx src/server/index.ts",
+    "dev": "tsx src/server/index.ts",
+    "build": "tsc",
+    "start": "node dist/server/index.js",
     "generate:api": "node scripts/generate-api.js"
   },
   "dependencies": {
     "@fastify/cors": "^11.2.0",
     "@fastify/helmet": "^13.0.2",
     "@fastify/rate-limit": "^10.3.0",
+    "@fastify/swagger": "^9.7.0",
+    "@fastify/swagger-ui": "^5.2.5",
     "axios": "^1.7.9",
     "cheerio": "^1.0.0",
     "dayjs": "^1.11.19",
@@ -21,10 +24,10 @@
     "puppeteer": "^23.11.0"
   },
   "devDependencies": {
-    "@fastify/swagger": "^9.7.0",
-    "@fastify/swagger-ui": "^5.2.5",
+    "@types/node": "^20.0.0",
     "@types/puppeteer": "^7.0.4",
     "orval": "^8.4.0",
+    "pino-pretty": "^13.1.3",
     "tsx": "^4.19.2",
     "typescript": "^5.7.2"
   }
