--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
     "dev": "tsx src/server/index.ts",
     "build": "tsc",
     "start": "node dist/server/index.js",
+    "test": "jest",
+    "test:watch": "jest --watch",
     "generate:api": "node scripts/generate-api.js"
   },
   "dependencies": {
@@ -20,14 +22,15 @@
     "dayjs": "^1.11.19",
     "dotenv": "^16.4.7",
     "fastify": "^5.7.4",
-    "openai": "^4.77.0",
-    "puppeteer": "^23.11.0"
+    "openai": "^4.77.0"
   },
   "devDependencies": {
+    "@types/jest": "^30.0.0",
     "@types/node": "^20.0.0",
-    "@types/puppeteer": "^7.0.4",
+    "jest": "^30.2.0",
     "orval": "^8.4.0",
     "pino-pretty": "^13.1.3",
+    "ts-jest": "^29.4.6",
     "tsx": "^4.19.2",
     "typescript": "^5.7.2"
   }
