--- a/package.json
+++ b/package.json
@@ -27,9 +27,11 @@
   "devDependencies": {
     "@types/jest": "^30.0.0",
     "@types/node": "^20.0.0",
+    "@types/supertest": "^6.0.3",
     "jest": "^30.2.0",
     "orval": "^8.4.0",
     "pino-pretty": "^13.1.3",
+    "supertest": "^7.2.2",
     "ts-jest": "^29.4.6",
     "tsx": "^4.19.2",
     "typescript": "^5.7.2"
