--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "forum-crawler",
-  "version": "1.0.1",
+  "version": "1.1.0",
   "main": "index.js",
   "license": "MIT",
   "scripts": {
@@ -12,7 +12,9 @@
     "generate:api": "node scripts/generate-api.js",
     "build:client": "cd packages/api-client && npm run build",
     "publish:client": "cd packages/api-client && npm publish",
-    "publish:client:auto": "node scripts/publish-client.js"
+    "publish:client:auto": "node scripts/publish-client.js",
+    "format": "prettier --write \"src/**/*.ts\" \"scripts/**/*.js\"",
+    "format:check": "prettier --check \"src/**/*.ts\" \"scripts/**/*.js\""
   },
   "dependencies": {
     "@fastify/cors": "^11.2.0",
@@ -34,6 +36,7 @@
     "jest": "^30.2.0",
     "orval": "^8.4.0",
     "pino-pretty": "^13.1.3",
+    "prettier": "^3.8.1",
     "supertest": "^7.2.2",
     "ts-jest": "^29.4.6",
     "tsx": "^4.19.2",
