Add database for local cache

--- a/.env.example
+++ b/.env.example
@@ -18,3 +18,16 @@ API_URL=https://api.yourdomain.com
 API_TITLE=PoE Forum Mobile API
 API_DESCRIPTION=API for browsing Path of Exile forum on mobile
 API_VERSION=1.0.0
+
+# Thread cache (PostgreSQL-backed)
+THREAD_CACHE_ENABLED=true
+THREAD_CACHE_TTL_MS=300000
+
+# Database
+DATABASE_URL=postgres://poe:poe@localhost:5432/poe_forum_mobile
+DATABASE_SSL=false
+
+# Local Docker Postgres defaults
+POSTGRES_DB=poe_forum_mobile
+POSTGRES_USER=poe
+POSTGRES_PASSWORD=poe
