--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@fastify/rate-limit": "^10.3.0",
     "@fastify/swagger": "^9.7.0",
     "@fastify/swagger-ui": "^5.2.5",
+    "@prisma/client": "^6.16.2",
     "axios": "^1.7.9",
     "cheerio": "^1.0.0",
     "dayjs": "^1.11.19",
@@ -37,6 +38,7 @@
     "orval": "^8.4.0",
     "pino-pretty": "^13.1.3",
     "prettier": "^3.8.1",
+    "prisma": "^6.16.2",
     "supertest": "^7.2.2",
     "ts-jest": "^29.4.6",
     "tsx": "^4.19.2",
