Support multi-origin CORS for custom domains

--- a/.env.example
+++ b/.env.example
@@ -5,6 +5,8 @@ NODE_ENV=production
 
 # CORS Configuration
 CORS_ORIGIN=https://yourdomain.com
+# Multiple origins are supported as comma-separated values
+# CORS_ORIGIN=https://poe-forum.devgroup.se,https://poe-forum-api.devgroup.se
 
 # Logging
 LOG_LEVEL=info
